Merged in feature/PAT-390/be-able-to-show-differences-on-upcoming-tenders (pull request #189)
Feature/PAT-390/be able to show differences on upcoming tenders

* Merge remote-tracking branch 'origin/develop' into feature/PAT-387/be-able-to-show-difference-on-project-information-section

# Conflicts:
#	src/main/java/uk/co/ogauthority/pathfinder/service/difference/DifferenceService.java
#	src/main/resources/scss/helpers/_all.scss
#	src/main/resources/templates/project/macros/checkAnswers.ftl
#	src/main/resources/templates/project/macros/differenceChanges.ftl

* - Removed duplicate project summary set in ProjectInformationViewUtil and removed variable by putting ternary operator in the setter

* - Removed duplicate spacing file which should have been moved to spacing directory

* - Allows upcoming tenders to be diffed
- Moved contact detail view object to be an extendable class so we can diff the object properly
- Refactored associated templates, view objects and test using old ContactDetailView class
- Refactored summary item view wrapper macro to take different params so can be used with base and diff versions
- Added check answers macros to make it easy for diff and non diff versions of templates to use the same underlying macro
- Files are not currently showing or diffable (this is WIP)

* - resolved checksyle violation in diff service

* - applied sensible defaults for params to _upcomingTenderSummaryFields macro to avoid template crash

* - Added diffing of files to upcoming tender summary

* Merge remote-tracking branch 'origin/develop' into feature/PAT-390/be-able-to-show-differences-on-upcoming-tenders

# Conflicts:
#	src/main/java/uk/co/ogauthority/pathfinder/model/view/projectinformation/ProjectInformationViewUtil.java
#	src/main/resources/templates/project/macros/checkAnswers.ftl
#	src/main/resources/templates/project/macros/differenceChanges.ftl

* - Fixed code smells

* Merged develop into feature/PAT-390/be-able-to-show-differences-on-upcoming-tenders

Ap